--- a/kubernetes_scripts/fims-web-app.yml
+++ b/kubernetes_scripts/fims-web-app.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: customer-service
+  name: fims-web-app-service
   namespace: default
 spec:
   selector:
-    app: customer-ms
+    app: fims-web-app-ms
   ports:
-    - port: 2024
-      targetPort: 2024
+    - port: 8888
+      targetPort: 8888
   type: LoadBalancer
 
 ---
@@ -16,13 +16,13 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: customer-ms-cluster
+  name: fims-web-app-ms-cluster
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: customer-ms
+      app: fims-web-app-ms
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -31,11 +31,11 @@ spec:
   template:
     metadata:
       labels:
-        app: customer-ms
+        app: fims-web-app-ms
     spec:
       containers:
-      - name: customer-ms
-        image: apache/fineract-cn-customer:latest
+      - name: fims-web-app-ms
+        image: apache/fineract-cn-fims-web-app:latest
         imagePullPolicy: IfNotPresent
         envFrom:
           - configMapRef:
@@ -44,11 +44,11 @@ spec:
               name: fineract-service-config
         env:
           - name: eureka.instance.hostname
-            value: customer-ms
+            value: fims-web-app-ms
           - name: server.port
-            value: "2024"
+            value: "2028"
           - name: spring.application.name
-            value:  customer-v1
+            value:  fims-web-app-v1
           - name: system.publicKey.modulus
             valueFrom:
               configMapKeyRef:
@@ -75,4 +75,4 @@ spec:
                 key: PRIVATE_KEY_EXPONENT
                 name: secret-config
         ports:
-          - containerPort: 2024
+          - containerPort: 8888
