--- a/kubernetes_scripts/accounting.yml
+++ b/kubernetes_scripts/accounting.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: accounting-service
+  name: accounting-ms
   namespace: default
 spec:
   selector:
