--- a/kubernetes_scripts/deposit.yml
+++ b/kubernetes_scripts/deposit.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: deposit-service
+  name: deposit-account-management-ms
   namespace: default
 spec:
   selector:
