--- a/kubernetes_scripts/notifications.yml
+++ b/kubernetes_scripts/notifications.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: notifications-service
+  name: notifications-ms
   namespace: default
 spec:
   selector:
